--- a/src/style/absracts/_mixins.scss
+++ b/src/style/absracts/_mixins.scss
@@ -10,3 +10,23 @@
     display: flex;
     flex-direction: column;
 }
+@mixin regular-borders {
+    border: 2px solid rgb(0, 110, 15);
+}
+
+@mixin selected-item {
+    box-shadow: 0 0 5px 2px rgb(255, 253, 117);
+    border: 1px solid rgb(255, 251, 0);
+}
+
+@mixin grid-4-rows {
+    display: grid;
+    grid-template-columns: repeat(4, 1fr);
+    gap: 5px;
+}
+
+@mixin grid-6-rows {
+    display: grid;
+    grid-template-columns: repeat(6, 1fr);
+    gap: 5px;
+}
