feat: implemented block for entering personal information with validation and bank card data entry block with validation

--- a/src/main.scss
+++ b/src/main.scss
@@ -12,6 +12,8 @@
 @import 'style/base/typography';
 
 @import 'style/components/buttons';
+@import 'style/components/dark-background';
+@import 'style/components/pop-up__order-formed';
 
 @import 'style/layout/footer';
 @import 'style/layout/header';
@@ -22,3 +24,4 @@
 @import 'style/layout/content';
 @import 'style/layout/content-control';
 @import 'style/layout/content-product';
+@import 'style/layout/form';
