--- a/src/style/absracts/_mixins.scss
+++ b/src/style/absracts/_mixins.scss
@@ -10,3 +10,9 @@
     display: flex;
     flex-direction: column;
 }
+
+@mixin flex-center { // центрирование элемента по вертикали и горизонтали
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
