feat: add functions to remove some query parameters and remove all query parameters

--- a/src/style/components/_buttons.scss
+++ b/src/style/components/_buttons.scss
@@ -6,8 +6,17 @@
     border: 1px black solid;
     background: $button-color;
     @include flex-center;
+    cursor: pointer;
 
 
     margin-top: 100px;
 }
 
+.button {
+    width: 80px;
+    height: 30px;
+    border: 1px black solid;
+    background: $button-color;
+    @include flex-center;
+    cursor: pointer;
+}
