--- a/src/style/absracts/_mixins.scss
+++ b/src/style/absracts/_mixins.scss
@@ -12,6 +12,7 @@
     display: flex;
     justify-content: center;
     align-items: center;
+}
 
 @mixin regular-borders {
     border: 2px solid rgb(0, 110, 15);
