--- a/src/style/layout/_filters.scss
+++ b/src/style/layout/_filters.scss
@@ -119,9 +119,12 @@
 
 .checkselect__items {
     width: 130px;
+}
 
 .filters__control {
     @include flex-space-between;
     flex-direction: row;
     margin: 2px 5px;
 }
+
+
