feat: finish goods description pages except adding to cart

--- a/src/main.scss
+++ b/src/main.scss
@@ -25,3 +25,4 @@
 @import 'style/layout/content-control';
 @import 'style/layout/content-product';
 @import 'style/layout/form';
+@import 'style/layout/goods-description';
