--- a/src/style/layout/_content-product.scss
+++ b/src/style/layout/_content-product.scss
@@ -7,7 +7,7 @@
 .content__products {
     width: 100%;
     max-height: width;
-    font-size: 0.6rem;
+    font-size: 0.5rem;
 }
 
 .large {
@@ -21,9 +21,11 @@
     box-sizing: border-box;
     overflow: hidden;
     aspect-ratio: 1 / 1;
+    cursor: pointer;
 }
 
 .content__products__product {
+    @include regular-borders;
     width: 100%;
     height: 100%;
     padding: 2px;
@@ -31,6 +33,8 @@
     flex-direction: column;
     @include flex-colomn;
     @include flex-space-between;
+    box-sizing: border-box;
+    cursor: pointer;
 }
 
 .added {
@@ -39,16 +43,25 @@
 .content__products__product__title {
     margin: 3px;
     text-align: center;
+    cursor: pointer;
+    user-select: none;
 }
 
 .content__products__product__info {
     margin: 3px;
     text-align: left;
+    width: 70%;
+    overflow: hidden;
+    box-sizing: border-box;
+    cursor: pointer;
+    user-select: none;
 }
 
 .content__products__product__info__item {
-    margin: 3px;
+    margin: 0 1px;
     text-align: left;
+    cursor: pointer;
+    user-select: none;
 }
 
 .content__products__product__cart,
