feat: do design work and bugfix

--- a/src/main.scss
+++ b/src/main.scss
@@ -13,6 +13,7 @@
 
 @import 'style/components/buttons';
 @import 'style/components/dark-background';
+@import 'style/components/inputs';
 @import 'style/components/pop-up__order-formed';
 
 @import 'style/layout/footer';
