--- a/src/style/absracts/_variables.scss
+++ b/src/style/absracts/_variables.scss
@@ -6,7 +6,15 @@
 
 // https://sass-guidelin.es/ru/#section-46/
 
-$button-color: rgb(207, 180, 231); // пока такой цвет, потом поменяем)
+$main-color: #2eb8b3; 
+$second-color: #ffcc99;
+
+$third-color: #ffe4c4;
+$text-color: #f5a300;
+
+$border-selected-color: #6495ED;
+$border-selected-shadow: #7B68EE;
+
 $background-form-color: white;
 $background-form-invalid: red;
 $background-form-valid: rgb(0, 255, 42);
