--- a/src/style/layout/_header.scss
+++ b/src/style/layout/_header.scss
@@ -2,7 +2,32 @@
     width: 100%;
     @include flex-space-between; //миксин
     align-items: center;
-    height: 40px;
+    height: 70px;
 
     border: 1px dashed rgb(17, 128, 17);
+}
+
+.basket {
+    display: flex;
+    align-items: center;
+    margin-right: 10px;
+}
+
+.logo {
+    height: 60px;
+    width: 120px;
+    background-image: url("./images/shop.png");
+    background-size: cover;
+    margin: 5px 2px 10px 5px;
+    box-sizing: content-box;
+
+}
+
+.basket__img {
+    height: 60px;
+    width: 60px;
+    background-image: url("./images/cart.png");
+    background-size: cover;
+    margin: 5px 2px 10px 5px;
+    box-sizing: content-box;
 }
