--- a/src/style/layout/_main.scss
+++ b/src/style/layout/_main.scss
@@ -1,3 +1,9 @@
 .main {
     display: flex;
 }
+
+body {
+    background-image: url(https://wsemoboi.ru/image/catalog/oboi/loymina/origins/115556_rossiyskie-oboi-loymina-kollektsiya-origins-artikul-als10005.jpg);
+    background-size: contain;
+}
+
