feat: adding and removing items to the cart

--- a/src/main.scss
+++ b/src/main.scss
@@ -26,3 +26,4 @@
 @import 'style/layout/content-product';
 @import 'style/layout/form';
 @import 'style/layout/goods-description';
+@import 'style/layout/cart';
