--- a/src/style/absracts/_mixins.scss
+++ b/src/style/absracts/_mixins.scss
@@ -16,7 +16,7 @@
 
 @mixin regular-borders {
     border: 1px solid #6495ED;
-    box-shadow: 0 0 2px 1px #7B68EE
+    box-shadow: 0 0 2px 1px #7B68EE;
 }
 
 @mixin selected-item {
