--- a/src/style/layout/_wrapper.scss
+++ b/src/style/layout/_wrapper.scss
@@ -2,7 +2,10 @@
     margin: 0 auto;
     width: 1200px;
     position: relative;
-
+    height: 100vh;
+    @include flex-colomn;
+    flex: 0 0 auto;
+    
     
     border: 1px dashed yellow;
 }
