--- a/src/style/absracts/_variables.scss
+++ b/src/style/absracts/_variables.scss
@@ -9,7 +9,7 @@
 $main-color: #2eb8b3; 
 $second-color: #ffcc99;
 
-$third-color: #ffe4c4;
+$third-color: #fdf5df;
 $text-color: #f5a300;
 
 $border-selected-color: #6495ED;
