--- a/src/style/layout/_form.scss
+++ b/src/style/layout/_form.scss
@@ -14,7 +14,7 @@
     align-items: center;
 
     
-    border: 1px solid $form-border;
+    @include regular-borders;
 }
 
 .form {
@@ -34,7 +34,7 @@
 .form__submit {
     width: 300px;
     height: 40px;
-    border-radius: 5px;
+    @include regular-borders;
     outline: none;
     text-align: center;
     margin-bottom: 10px;
@@ -61,21 +61,21 @@
     height: 150px;
     border-radius: 15px;
     padding: 10px;
-    border: 1px solid $form-border;
+    border: 1px solid $second-color;
 }
 
 .form__payment-system {
     width: 40px;
     height: 30px;
     border-radius: 5px;
-    border: 1px solid $form-border;
+    border: 1px solid $second-color;
 }
 
 .form__number-card {
     width: 170px;
     height: 30px;
     border-radius: 5px;
-    border: 1px solid $form-border;
+    border: 1px solid $second-color;
 }
 
 .form__card-box {
@@ -94,7 +94,7 @@
 .form__CVV {
     width: 75px;
     height: 30px;
-    border: 1px solid $form-border;
+    border: 1px solid $second-color;
 }
 
 .form__CVV {
