--- a/src/style/components/_inputs.scss
+++ b/src/style/components/_inputs.scss
@@ -6,8 +6,8 @@ input[type='checkbox'] {
   cursor: pointer;  
 }
 
-select,
-input[type='text'] {
+.content__control__sort,
+.content__control__found > input[type='text'] {
   -webkit-appearance: none;
   -moz-appearance: none;
   appearance: none;
@@ -17,11 +17,31 @@ input[type='text'] {
   height: 30px;
 }
 
-select {
+.content__control__sort {
   width: 100px;
 
 }
 
-input[type='text'] {
+.content__control__found > input[type='text'] {
   width: 130px;
+}
+
+
+.filters__category__items::-webkit-scrollbar,
+.filters__brand__items::-webkit-scrollbar,
+body::-webkit-scrollbar {
+  width: 0.6em;
+}
+
+.filters__category__items::-webkit-scrollbar-track,
+.filters__brand__items::-webkit-scrollbar-track,
+body::-webkit-scrollbar-track {
+  -webkit-box-shadow: inset 0 0 6px rgba(0,0,0,0.3);
+}
+
+.filters__category__items::-webkit-scrollbar-thumb,
+.filters__brand__items::-webkit-scrollbar-thumb,
+body::-webkit-scrollbar-thumb {
+background-color: $main-color;
+outline: 1px solid $main-color;
 }
