--- a/src/style/layout/_content-control.scss
+++ b/src/style/layout/_content-control.scss
@@ -1,7 +1,7 @@
 .content__control {
     width: 100%;
     @include flex-space-between;
-    border: 1px dashed rgb(0, 110, 255);
+    border-bottom: 2px solid $main-color;
     padding: 2px;
     align-items: center;
 }
@@ -9,6 +9,11 @@
 .content__control__sort,
 #search {
     font: inherit;
+}
+.content__control__count__text,
+.content__control__count__value,
+.content__control__layout__switch {
+    font-weight: 900;
 }
 
 .content__control__layout__switch {
