--- a/src/style/layout/_content-product.scss
+++ b/src/style/layout/_content-product.scss
@@ -1,13 +1,12 @@
 .content__products__wrapper {
     width: 100%;
     min-height: 500px;
-    border: 1px dashed black;
 }
 
 .content__products {
     width: 100%;
     max-height: width;
-    font-size: 0.5rem;
+    font-size: 0.82rem;
 }
 
 .large {
@@ -45,16 +44,22 @@
     text-align: center;
     cursor: pointer;
     user-select: none;
+    background-color: rgba(255, 255, 255, 0.90);
+    border: 1px solid $main-color;
+    border-radius: 2px;
+    font-size: 0.62rem;
 }
 
 .content__products__product__info {
     margin: 3px;
     text-align: left;
-    width: 70%;
+    width: 65%;
     overflow: hidden;
     box-sizing: border-box;
     cursor: pointer;
     user-select: none;
+    background-color: rgba(255, 255, 255, 0.5);
+    @include regular-borders;
 }
 
 .content__products__product__info__item {
@@ -68,4 +73,22 @@
 .content__products__product__details {
     margin: 3px;
     text-align: center;
+}
+
+@media screen and (max-width: 1200px) {
+    .content__products {
+        font-size: 0.6rem;
+    }
+    .content__products__product__info {
+        width: 75%;
+    }
+}
+
+@media screen and (max-width: 800px) {
+    .content__products {
+        font-size: 0.5rem;
+    }
+    .content__products__product__info {
+        width: 90%;
+    }
 }
