--- a/src/style/layout/_main.scss
+++ b/src/style/layout/_main.scss
@@ -10,3 +10,10 @@ body {
     background-image: url(https://wsemoboi.ru/image/catalog/oboi/loymina/origins/115556_rossiyskie-oboi-loymina-kollektsiya-origins-artikul-als10005.jpg);
     background-size: contain;
 }
+
+.main,
+.goods__details,
+.cart {
+    width: 87%;
+    margin: 0 auto;
+}
