feat: start working on local storage

--- a/src/style/layout/_content-product.scss
+++ b/src/style/layout/_content-product.scss
@@ -48,6 +48,7 @@
     border: 1px solid $main-color;
     border-radius: 2px;
     font-size: 0.62rem;
+    font-weight: 700;
 }
 
 .content__products__product__info {
