--- a/src/style/layout/_cart.scss
+++ b/src/style/layout/_cart.scss
@@ -22,6 +22,7 @@
 
 .cart__title {
     @include flex-space-between;
+    width: 100%;
     height: 50px;
     align-items: center;
     padding: 10px;
@@ -130,5 +131,30 @@
     @include flex-center;
     background: $main-color;
     cursor: pointer;
+}
+
+.cart__summary {
+    @include flex-colomn;
+    justify-content: space-between;
+    align-items: center;
+    margin-bottom: 20px;
+}
+
+.cart__summary__wrapper {
+    @include flex-colomn;
+    justify-content: space-between;
+    align-items: center;
+}
+
+.cart__summary__promo {
+    margin-top: 30px;
+}
+
+.cart__summary__box {
+    @include flex-space-between;
+    align-items: center;
+    margin-top: 20px;
+    width: 100px;
+    height: 30px;
 }
 
