feat: finish pagination and instant purchase of a product

--- a/src/style/layout/_content-product.scss
+++ b/src/style/layout/_content-product.scss
@@ -81,7 +81,10 @@
         font-size: 0.6rem;
     }
     .content__products__product__info {
-        width: 75%;
+        width: 80%;
+    }
+    .content__products__product__title {
+        font-size: 0.58rem;
     }
 }
 
@@ -91,5 +94,8 @@
     }
     .content__products__product__info {
         width: 90%;
+    }
+    .content__products__product__title {
+        font-size: 0.5rem;
     }
 }
