feat: finish styles, all functions, do some bugfix

--- a/src/style/components/_inputs.scss
+++ b/src/style/components/_inputs.scss
@@ -22,8 +22,8 @@ input[type='checkbox'] {
 
 }
 
-.content__control__found > input[type='text'] {
-  width: 130px;
+.content__control__found__input {
+  width: 130px; 
 }
 
 
