--- a/src/style/layout/_content.scss
+++ b/src/style/layout/_content.scss
@@ -3,3 +3,9 @@
     @include flex-colomn;
     @include azure-borders;
 }
+
+.main_404 {
+    width: 87%;
+    margin: 0 auto;
+    min-height: 500px;
+}
