--- a/src/style/layout/_content-product.scss
+++ b/src/style/layout/_content-product.scss
@@ -51,6 +51,19 @@
     font-weight: 700;
 }
 
+.content__products__wrapper__nogoods {
+    @include flex-center;
+    margin: 10% auto;
+    flex-direction: column;
+    font-size: 1rem;
+}
+
+
+#noGoodsText{
+    cursor: default;
+    user-select: none;
+}
+
 .content__products__product__info {
     margin: 3px;
     text-align: left;
