feat: implement the button to complete the order

--- a/src/style/absracts/_variables.scss
+++ b/src/style/absracts/_variables.scss
@@ -16,7 +16,7 @@ $border-selected-color: #6495ED;
 $border-selected-shadow: #7B68EE;
 
 $background-form-color: white;
-$background-form-invalid: red;
-$background-form-valid: rgb(0, 255, 42);
+$background-form-invalid: rgb(255, 7, 7);
+$background-form-valid: rgb(13, 148, 35);
 
 $form-border: black;
