--- a/src/style/absracts/_mixins.scss
+++ b/src/style/absracts/_mixins.scss
@@ -8,7 +8,7 @@
     flex-direction: column;
 }
 
-@mixin flex-center { // центрирование элемента по вертикали и горизонтали
+@mixin flex-center {
     display: flex;
     justify-content: center;
     align-items: center;
