--- a/src/style/layout/_cart.scss
+++ b/src/style/layout/_cart.scss
@@ -18,6 +18,7 @@
 
 .cart__summary {
     width: 35%;
+    height: 450px;
 }
 
 .cart__title {
@@ -27,6 +28,12 @@
     align-items: center;
     padding: 10px;
     background: $main-color;
+    color: white;
+    font-size: 16px;
+}
+
+.cart__summary .cart__title {
+    @include flex-center;
 }
 
 .cart__page {
@@ -58,7 +65,7 @@
 
 .cart__item {
     width: 100%;
-    height: 100px;
+    height: 120px;
     border-bottom: 2px solid $main-color;
     @include flex-space-between;
     align-items: center;
@@ -81,9 +88,11 @@
 
 .cart__item__title {
     width: 100%;
-    height: 20px;
+    height: 25px;
     @include flex-center;
     border-bottom: 1px solid $main-color;
+    font-size: 16px;
+    font-weight: 800;
 }
 
 .cart__item__description {
@@ -131,6 +140,7 @@
     @include flex-center;
     background: $main-color;
     cursor: pointer;
+    color: white;
 }
 
 .cart__summary {
@@ -201,5 +211,9 @@
 
 #cart__limit__input {
     font: inherit;
+    outline:none;
+    margin-left: 10px;
+    padding-left: 10px;
+    color: $main-color;
 }
 
