--- a/src/style/components/_inputs.scss
+++ b/src/style/components/_inputs.scss
@@ -7,7 +7,7 @@ input[type='checkbox'] {
 }
 
 .content__control__sort,
-.content__control__found > input[type='text'] {
+.content__control__found__input {
   -webkit-appearance: none;
   -moz-appearance: none;
   appearance: none;
