--- a/src/style/layout/_form.scss
+++ b/src/style/layout/_form.scss
@@ -59,10 +59,10 @@
 
 .form__card-section__card {
     width: 250px;
-    height: 150px;
+    height: 160px;
     border-radius: 15px;
     padding: 10px;
-    padding-top: 20px;
+    padding-top: 15px;
     border: 1px solid $main-color;
     background: linear-gradient(to right, rgb(9, 96, 155), $main-color);
 }
@@ -85,6 +85,7 @@
 
 .form__card-box {
     @include flex-space-between;
+
 }
 
 .form__payment-system_visa,
@@ -105,4 +106,34 @@
 
 .form__CVV {
     width: 50px;
+}
+
+.form__error {
+    height: 35px;
+    width: 60px;
+    color: $background-form-invalid;
+    @include flex-center;
+    position: absolute;
+    right: -60px;
+    opacity: 0;
+}
+
+.form__wrapper {
+    position: relative;
+    display: flex;
+}
+
+.form__cart__section-error {
+    width: 100%;
+    height: 50px;
+    @include flex-colomn;
+}
+
+.form__cart__error {
+    height: 35px;
+    width: 100%;
+    color: white;
+    @include flex-center;
+    position: static;
+    opacity: 0;
 }
